client/css/visualizations-manager.css
main {
	grid-template-columns: 1fr;
	padding: 0;
	display: block;
	height: calc(100% - 50px);
}
	main > #list.show,
	main > #insert-visualization.show {
		display: grid;
		grid-gap: calc(var(--gap) * 2);
		max-height: 100%;
		overflow: auto;
	}
		main > #list .toolbar {
			padding: 0;
			justify-content: space-between;
		}
		main > #list .search-column-filters {
			margin: 0;
		}
	main > #list td .search-text {
		cursor: pointer;
	}
	main > #list td .search-text:hover {
		text-decoration: underline;
	}
	main section#insert-visualization #add-visualization-form {
		box-shadow: none;
	}
	main section.configuration.show {
		display: grid;
		grid-template-columns: 3fr 4fr;
		grid-gap: calc(var(--gap) * 2);
		height: calc(100%);
		grid-template-rows: max-content max-content 1fr;
	}
	main section.configuration.show.compact {
		grid-template-columns: 1fr 1fr 1fr;
	}
		main section.configuration > .toolbar,
		main section.configuration > h1 {
			grid-column: 1 / 4;
		}
		main section.configuration > .toolbar {
			padding: 0;
		}
		main section.configuration > .query-history {
			margin-left: 0;
		}
		main section.configuration > .visualization-form {
			overflow: auto;
		}
			main section.configuration > .visualization-form h3 {
				top: 0;
			}
		main section.configuration > .tabs {
			grid-column: unset;
			grid-row: unset;
			overflow: auto;
		}

